--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- hero -->
 
     <main>
-      <section class="hero-section">
+      <section class="hero-section hiden">
         <div class="container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
           <button type="button" class="order-service-button">
@@ -65,7 +65,7 @@
 
       <!-- Our advantages -->
 
-      <section class="advantages-section">
+      <section class="advantages-section hiden">
         <div class="container">
           <h2 class="our-advantage-title visually-hidden">Our Advantages</h2>
           <ul class="advantages-list">
@@ -123,7 +123,7 @@
 
       <!-- Our Team -->
 
-      <section class="our-team-section">
+      <section class="our-team-section hiden">
         <div class="container team-container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="our-team-list">
@@ -333,7 +333,7 @@
 
       <!-- Our Portfolio -->
 
-      <section class="our-portfolio-section">
+      <section class="our-portfolio-section hiden">
         <div class="container portfolio-container">
           <h2 class="our-portfolio-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
@@ -481,7 +481,7 @@
 
     <!-- Footer -->
 
-    <footer class="page-footer">
+    <footer class="page-footer hiden">
       <div class="container footer-container">
         <div class="footer-style">
           <a class="logo footer-logo" href="./index.html"
@@ -561,7 +561,7 @@
     <!-- Leave your contacts and we will call you back -->
 
     <div class="backdrop is-open">
-      <div class="modal">
+      <div class="modal hiden">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
