--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--header-->
+    <!--Header-->
     <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -55,8 +55,16 @@
           </svg>
         </button>
       </div>
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close" data-menu-close>Close</button>
+          <nav class="mobile-menu-nav">Navigation</nav>
+          <address>Address</address>
+          <div>Soc link</div>
+        </div>
+      </div>
     </header>
-    <!-- hero -->
+    <!-- Hero -->
 
     <main>
       <section class="hero-section hiden">
