--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <!-- Hero -->
 
     <main>
-      <section class="hero-section hiden">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
-          <button type="button" class="order-service-button">
+          <button class="order-service-button" type="button">
             Order Service
           </button>
         </div>
@@ -78,7 +78,7 @@
 
       <!-- Our advantages -->
 
-      <section class="advantages-section hiden">
+      <section class="advantages-section">
         <div class="container">
           <h2 class="our-advantage-title visually-hidden">Our Advantages</h2>
           <ul class="advantages-list">
@@ -136,7 +136,7 @@
 
       <!-- Our Team -->
 
-      <section class="our-team-section hiden">
+      <section class="our-team-section">
         <div class="container team-container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="our-team-list">
