--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             <!-- Mark Guerrero -->
             <li class="our-team-item">
               <img
-                src="./images/Mark.jpg"
+                class="our-team-image"
+                srcset="./images/Our-team/Mark-Guerrero-2x.jpg 2x"
+                src="./images/Our-team/Mark-Guerrero-1x.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -193,7 +195,9 @@
 
             <li class="our-team-item">
               <img
-                src="./images/Tom.jpg"
+                class="our-team-image"
+                srcset="./images/Our-team/Tom-Ford-2x.jpg 2x"
+                src="./images/Our-team/Tom-Ford-1x.jpg-1x.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -244,7 +248,9 @@
 
             <li class="our-team-item">
               <img
-                src="./images/Camila.jpg"
+                class="our-team-image"
+                srcset="./images/Our-team/Camila-Garcia-2x.jpg 2x"
+                src="./images/Our-team/Camila-Garcia-1x.jpg-1x.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -294,6 +300,9 @@
 
             <li class="our-team-item">
               <img
+                class="our-team-image"
+                srcset="./images/Our-team/Daniel-Wilson-2x.jpg 2x"
+                src="./images/Our-team/Daniel-Wilson-1x.jpg-1x.jpg"
                 src="./images/Daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
