--- a/index.html
+++ b/index.html
@@ -303,7 +303,6 @@
                 class="our-team-image"
                 srcset="./images/Our-team/Daniel-Wilson-2x.jpg 2x"
                 src="./images/Our-team/Daniel-Wilson-1x.jpg-1x.jpg"
-                src="./images/Daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -503,7 +502,7 @@
 
     <!-- Footer -->
 
-    <footer class="page-footer hiden">
+    <footer class="page-footer">
       <div class="container footer-container">
         <div class="footer-style">
           <a class="logo footer-logo" href="./index.html"
