--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -11,16 +12,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Header-->
+    <!--#region Header-->
+
     <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -49,12 +53,16 @@
             </li>
           </ul>
         </address>
+
         <button class="burger-btn" type="button" data-menu-open>
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
       </div>
+      <!-- #endregion -->
+
+      <!--#region Mobile-menu-->
       <div class="mobile-menu" data-menu>
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close" data-menu-close>Close</button>
@@ -64,19 +72,21 @@
         </div>
       </div>
     </header>
-    <!-- Hero -->
+    <!-- #endregion -->
 
+    <!-- #region Hero section -->
     <main>
       <section class="hero-section">
         <div class="container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
-          <button class="order-service-button" type="button">
+          <button class="order-service-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
       </section>
+      <!-- #endregion -->
 
-      <!-- Our advantages -->
+      <!-- #region Our advantages -->
 
       <section class="advantages-section">
         <div class="container">
@@ -133,14 +143,17 @@
           </ul>
         </div>
       </section>
+      <!-- #endregion -->
 
-      <!-- Our Team -->
+      <!-- #region Our Team -->
 
       <section class="our-team-section">
         <div class="container team-container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="our-team-list">
-            <!-- Mark Guerrero -->
+            <!-- #endregion -->
+
+            <!-- #region Mark Guerrero -->
             <li class="our-team-item">
               <img
                 class="our-team-image"
@@ -153,8 +166,9 @@
               <div class="our-team-container">
                 <h3 class="member-name">Mark Guerrero</h3>
                 <p class="member-role">Product Designer</p>
+                <!-- #endregion -->
 
-                <!-- Mark Guerrero icon -->
+                <!-- #region Mark Guerrero icon -->
                 <ul class="svg-list">
                   <li class="svg-item">
                     <a href="" target="_blank" class="svg-link">
@@ -190,8 +204,9 @@
                 </ul>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Tom Ford -->
+            <!-- #region Tom Ford -->
 
             <li class="our-team-item">
               <img
@@ -205,8 +220,9 @@
               <div class="our-team-container">
                 <h3 class="member-name">Tom Ford</h3>
                 <p class="member-role">Frontend Developer</p>
+                <!-- #endregion -->
 
-                <!-- Tom Ford icon -->
+                <!-- #region Tom Ford icon -->
 
                 <ul class="svg-list">
                   <li class="svg-item">
@@ -243,8 +259,9 @@
                 </ul>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Camila Garcia -->
+            <!-- #region Camila Garcia -->
 
             <li class="our-team-item">
               <img
@@ -258,8 +275,9 @@
               <div class="our-team-container">
                 <h3 class="member-name">Camila Garcia</h3>
                 <p class="member-role">Marketing</p>
+                <!-- #endregion -->
 
-                <!-- Camila Garcia icon -->
+                <!-- #region Camila Garcia icon -->
                 <ul class="svg-list">
                   <li class="svg-item">
                     <a href="" target="_blank" class="svg-link">
@@ -295,8 +313,9 @@
                 </ul>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Daniel Wilson -->
+            <!-- #region Daniel Wilson -->
 
             <li class="our-team-item">
               <img
@@ -310,8 +329,9 @@
               <div class="our-team-container">
                 <h3 class="member-name">Daniel Wilson</h3>
                 <p class="member-role">UI Designer</p>
+                <!-- #endregion -->
 
-                <!-- Daniel Wilson icon -->
+                <!-- #region Daniel Wilson icon -->
 
                 <ul class="svg-list">
                   <li class="svg-item">
@@ -351,14 +371,17 @@
           </ul>
         </div>
       </section>
+      <!-- #endregion -->
 
-      <!-- Our Portfolio -->
+      <!-- #region Our Portfolio -->
 
       <section class="our-portfolio-section hiden">
         <div class="container portfolio-container">
           <h2 class="our-portfolio-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
-            <!-- Banking App App-->
+            <!-- #endregion -->
+
+            <!-- #region Banking App App-->
 
             <li class="our-portfolio-item">
               <div class="img-portfolio">
@@ -381,8 +404,9 @@
                 <p class="our-portfolio-description">App</p>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Cashless Payment Marketing -->
+            <!-- #region Cashless Payment Marketing -->
 
             <li class="our-portfolio-item">
               <div class="img-portfolio">
@@ -404,8 +428,9 @@
                 <p class="our-portfolio-description">Marketing</p>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Meditation App App -->
+            <!-- #region Meditation App App -->
 
             <li class="our-portfolio-item">
               <div class="img-portfolio">
@@ -427,8 +452,9 @@
                 <p class="our-portfolio-description">App</p>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Taxi Service Marketing -->
+            <!-- #region Taxi Service Marketing -->
             <li class="our-portfolio-item">
               <div class="img-portfolio">
                 <img
@@ -449,8 +475,9 @@
                 <p class="our-portfolio-description">Marketing</p>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Screen Illustrations Design -->
+            <!-- #region Screen Illustrations Design -->
 
             <li class="our-portfolio-item">
               <div class="img-portfolio">
@@ -472,8 +499,9 @@
                 <p class="our-portfolio-description">Design</p>
               </div>
             </li>
+            <!-- #endregion -->
 
-            <!-- Online Courses Marketing -->
+            <!-- #region Online Courses Marketing -->
 
             <li class="our-portfolio-item">
               <div class="img-portfolio">
@@ -499,8 +527,9 @@
         </div>
       </section>
     </main>
+    <!-- #endregion -->
 
-    <!-- Footer -->
+    <!-- #region Footer -->
 
     <footer class="page-footer">
       <div class="container footer-container">
@@ -513,8 +542,9 @@
             digital marketing & growth solutions.
           </p>
         </div>
+        <!-- #endregion -->
 
-        <!-- Social media -->
+        <!-- #region Social media -->
 
         <div class="footer-links">
           <p class="footer-subtitle">Social media</p>
@@ -553,8 +583,9 @@
             </li>
           </ul>
         </div>
+        <!-- #endregion -->
 
-        <!-- Subscribe -->
+        <!-- #region Subscribe -->
 
         <div class="subscribe-container">
           <p class="subscribe">Subscribe</p>
@@ -578,8 +609,9 @@
         </div>
       </div>
     </footer>
+    <!-- #endregion -->
 
-    <!-- Leave your contacts and we will call you back -->
+    <!-- #region Leave your contacts and we will call you back -->
 
     <div class="backdrop is-open">
       <div class="modal hiden">
@@ -590,7 +622,9 @@
         </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
         <form action="#" class="form" id="form1">
-          <!-- Name -->
+          <!-- #endregion -->
+
+          <!-- #region Name -->
           <div class="form-field">
             <label class="form-label" for="user-name">Name</label>
             <div class="input-wrapper">
@@ -605,8 +639,9 @@
               </svg>
             </div>
           </div>
+          <!-- #endregion -->
 
-          <!-- Phone -->
+          <!-- #region Phone -->
           <div class="form-field">
             <label class="form-label" for="phone">Phone</label>
             <div class="input-wrapper">
@@ -616,8 +651,9 @@
               </svg>
             </div>
           </div>
+          <!-- #endregion -->
 
-          <!-- Email -->
+          <!-- #region Email -->
           <div class="form-field">
             <label class="form-label" for="email">Email</label>
             <div class="input-wrapper">
@@ -627,8 +663,9 @@
               </svg>
             </div>
           </div>
+          <!-- #endregion -->
 
-          <!-- Comment -->
+          <!-- #region Comment -->
           <div class="form-field-label div-bottom">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
@@ -638,7 +675,9 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <!-- Privacy Policy -->
+          <!-- #endregion -->
+
+          <!-- #region Privacy Policy -->
           <div class="form-checkbox">
             <input
               class="visually-hidden"
@@ -657,10 +696,15 @@
               <a href="" class="checkbox-link">Privacy Policy</a>
             </label>
           </div>
-          <!-- Submit Button -->
+          <!-- #endregion -->
+
+          <!-- #region Submit Button -->
           <button class="form-submit" type="submit">Send</button>
         </form>
       </div>
     </div>
+    <!-- #endregion -->
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
