--- a/index.html
+++ b/index.html
@@ -377,106 +377,165 @@
 
       <!-- #region Our Portfolio -->
 
-      <section class="our-portfolio-section hiden">
-        <div class="container portfolio-container">
-          <h2 class="our-portfolio-title">Our Portfolio</h2>
-          <ul class="our-portfolio-list">
-            <!-- #endregion -->
+      <section class="our-portfolio-section">
+  <div class="container portfolio-container">
+    <h2 class="our-portfolio-title">Our Portfolio</h2>
+    <ul class="our-portfolio-list">
+      <!-- Banking App -->
+      <li class="our-portfolio-item">
+        <picture>
+          <source
+            media="(min-width: 1158px)"
+            srcset="
+              ./images/Portfolio/Banking-App-desktop-1x.jpg 1x,
+              ./images/Portfolio/Banking-App-desktop-2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/Portfolio/Banking-App-tablet-1x.jpg 1x,
+              ./images/Portfolio/Banking-App-tablet-2x.jpg 2x
+            "
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/Portfolio/Banking-App-mobile-1x.jpg 1x,
+              ./images/Portfolio/Banking-App-mobile-2x.jpg 2x
+            "
+          />
+          <img
+            class="portfolio-img"
+            src="./images/Portfolio/Banking-App-mobile-1x.jpg"
+            alt="Banking App"
+            width="360"
+            height="300"
+          />
+        </picture>
+        <div class="our-portfolio-container">
+          <h3 class="section-title">Banking App</h3>
+          <p class="our-portfolio-description">App</p>
+        </div>
+      </li>
 
-            <!-- #region Banking App App-->
+      <!-- Cashless Payment -->
+      <li class="our-portfolio-item">
+        <picture>
+          <source
+            media="(min-width: 1158px)"
+            srcset="
+              ./images/Portfolio/Cashless-Payment-desktop-1x.jpg 1x,
+              ./images/Portfolio/Cashless-Payment-desktop-2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/Portfolio/Cashless-Payment-tablet-1x.jpg 1x,
+              ./images/Portfolio/Cashless-Payment-tablet-2x.jpg 2x
+            "
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/Portfolio/Cashless-Payment-mobile-1x.jpg 1x,
+              ./images/Portfolio/Cashless-Payment-mobile-2x.jpg 2x
+            "
+          />
+          <img
+            class="portfolio-img"
+            src="./images/Portfolio/Cashless-Payment-mobile-1x.jpg"
+            alt="Cashless Payment"
+            width="360"
+            height="300"
+          />
+        </picture>
+        <div class="our-portfolio-container">
+          <h3 class="section-title">Cashless Payment</h3>
+          <p class="our-portfolio-description">Marketing</p>
+        </div>
+      </li>
 
-            <li class="our-portfolio-item">
-              <div class="img-portfolio">
-                <img
-                  class="img"
-                  src="./images_portfolio/5449822167706492241.jpg"
-                  alt="App"
-                  width="360"
-                  height="300"
-                />
+      <!-- Meditation App -->
+      <li class="our-portfolio-item">
+        <picture>
+          <source
+            media="(min-width: 1158px)"
+            srcset="
+              ./images/Portfolio/Meditation-App-desktop-1x.jpg 1x,
+              ./images/Portfolio/Meditation-App-desktop-2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/Portfolio/Meditation-App-tablet-1x.jpg 1x,
+              ./images/Portfolio/Meditation-App-tablet-2x.jpg 2x
+            "
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/Portfolio/Meditation-App-mobile-1x.jpg 1x,
+              ./images/Portfolio/Meditation-App-mobile-2x.jpg 2x
+            "
+          />
+          <img
+            class="portfolio-img"
+            src="./images/Portfolio/Meditation-App-mobile-1x.jpg"
+            alt="Meditation App"
+            width="360"
+            height="300"
+          />
+        </picture>
+        <div class="our-portfolio-container">
+          <h3 class="section-title">Meditation App</h3>
+          <p class="our-portfolio-description">App</p>
+        </div>
+      </li>
 
-                <p class="overlay-content">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Banking App</h3>
-                <p class="our-portfolio-description">App</p>
-              </div>
-            </li>
-            <!-- #endregion -->
+      <!-- Taxi Service -->
+      <li class="our-portfolio-item">
+        <picture>
+          <source
+            media="(min-width: 1158px)"
+            srcset="
+              ./images/Portfolio/Taxi-Service-desktop-1x.jpg 1x,
+              ./images/Portfolio/Taxi-Service-desktop-2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/Portfolio/Taxi-Service-tablet-1x.jpg 1x,
+              ./images/Portfolio/Taxi-Service-tablet-2x.jpg 2x
+            "
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/Portfolio/Taxi-Service-mobile-1x.jpg 1x,
+              ./images/Portfolio/Taxi-Service-mobile-2x.jpg 2x
+            "
+          />
+          <img
+            class="portfolio-img"
+            src="./images/Portfolio/Taxi-Service-mobile-1x.jpg"
+            alt="Taxi Service"
+            width="360"
+            height="300"
+          />
+        </picture>
+        <div class="our-portfolio-container">
+          <h3 class="section-title">Taxi Service</h3>
+          <p class="our-portfolio-description">Marketing</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
 
-            <!-- #region Cashless Payment Marketing -->
-
-            <li class="our-portfolio-item">
-              <div class="img-portfolio">
-                <img
-                  class="img"
-                  src="./images_portfolio/5449822167706492240.jpg"
-                  alt="Marketing"
-                  width="360"
-                  height="300"
-                />
-                <p class="overlay-content">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Cashless Payment</h3>
-                <p class="our-portfolio-description">Marketing</p>
-              </div>
-            </li>
-            <!-- #endregion -->
-
-            <!-- #region Meditation App App -->
-
-            <li class="our-portfolio-item">
-              <div class="img-portfolio">
-                <img
-                  class="img"
-                  src="./images_portfolio/5449822167706492239.jpg"
-                  alt="App"
-                  width="360"
-                  height="300"
-                />
-                <p class="overlay-content">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Meditation App</h3>
-                <p class="our-portfolio-description">App</p>
-              </div>
-            </li>
-            <!-- #endregion -->
-
-            <!-- #region Taxi Service Marketing -->
-            <li class="our-portfolio-item">
-              <div class="img-portfolio">
-                <img
-                  class="img"
-                  src="./images_portfolio/5449822167706492238.jpg"
-                  alt="Marketing"
-                  width="360"
-                  height="300"
-                />
-                <p class="overlay-content">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Taxi Service</h3>
-                <p class="our-portfolio-description">Marketing</p>
-              </div>
-            </li>
             <!-- #endregion -->
 
             <!-- #region Screen Illustrations Design -->
@@ -490,7 +549,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="overlay-content">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -514,7 +573,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="overlay-content">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
