--- a/index.html
+++ b/index.html
@@ -377,12 +377,13 @@
 
       <!-- #region Our Portfolio -->
 
-      <section class="our-portfolio-section">
+<section class="our-portfolio-section">
   <div class="container portfolio-container">
     <h2 class="our-portfolio-title">Our Portfolio</h2>
     <ul class="our-portfolio-list">
       <!-- Banking App -->
       <li class="our-portfolio-item">
+        <div class="portfolio-item-wrapper">
         <picture>
           <source
             media="(min-width: 1158px)"
@@ -413,6 +414,12 @@
             height="300"
           />
         </picture>
+        <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
         <div class="our-portfolio-container">
           <h3 class="section-title">Banking App</h3>
           <p class="our-portfolio-description">App</p>
@@ -421,6 +428,7 @@
 
       <!-- Cashless Payment -->
       <li class="our-portfolio-item">
+         <div class="portfolio-item-wrapper">
         <picture>
           <source
             media="(min-width: 1158px)"
@@ -451,6 +459,12 @@
             height="300"
           />
         </picture>
+        <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
         <div class="our-portfolio-container">
           <h3 class="section-title">Cashless Payment</h3>
           <p class="our-portfolio-description">Marketing</p>
@@ -459,6 +473,7 @@
 
       <!-- Meditation App -->
       <li class="our-portfolio-item">
+         <div class="portfolio-item-wrapper">
         <picture>
           <source
             media="(min-width: 1158px)"
@@ -489,6 +504,12 @@
             height="300"
           />
         </picture>
+        <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
         <div class="our-portfolio-container">
           <h3 class="section-title">Meditation App</h3>
           <p class="our-portfolio-description">App</p>
@@ -497,6 +518,7 @@
 
       <!-- Taxi Service -->
       <li class="our-portfolio-item">
+         <div class="portfolio-item-wrapper">
         <picture>
           <source
             media="(min-width: 1158px)"
@@ -527,6 +549,12 @@
             height="300"
           />
         </picture>
+        <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
         <div class="our-portfolio-container">
           <h3 class="section-title">Taxi Service</h3>
           <p class="our-portfolio-description">Marketing</p>
@@ -536,19 +564,42 @@
   </div>
 </section>
 
-            <!-- #endregion -->
+<!-- #endregion -->
 
             <!-- #region Screen Illustrations Design -->
 
             <li class="our-portfolio-item">
-              <div class="img-portfolio">
-                <img
-                  class="img"
-                  src="./images_portfolio/5449822167706492237.jpg"
-                  alt="Design"
-                  width="360"
-                  height="300"
-                />
+               <div class="portfolio-item-wrapper">
+              <picture>
+          <source
+            media="(min-width: 1158px)"
+            srcset="
+              ./images/Portfolio/Screen-Illustrations-desktop-1x.jpg 1x,
+              ./images/Portfolio/Screen-Illustrations-desktop-2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/Portfolio/Screen-Illustrations-tablet-1x.jpg 1x,
+              ./images/Portfolio/Screen-Illustrations-tablet-2x.jpg 2x
+            "
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/Portfolio/Screen-Illustrations-mobile-1x.jpg 1x,
+              ./images/Portfolio/Screen-Illustrations-mobile-2x.jpg 2x
+            "
+          />
+          <img
+            class="portfolio-img"
+            src="./images/Portfolio/Screen-Illustrations-mobile-1x.jpg"
+            alt="Screen Illustrations"
+            width="360"
+            height="300"
+          />
+        </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -565,14 +616,37 @@
             <!-- #region Online Courses Marketing -->
 
             <li class="our-portfolio-item">
-              <div class="img-portfolio">
-                <img
-                  class="img"
-                  src="./images_portfolio/5449822167706492235.jpg"
-                  alt="Marketing"
-                  width="360"
-                  height="300"
-                />
+             <div class="portfolio-item-wrapper">
+              <picture>
+          <source
+            media="(min-width: 1158px)"
+            srcset="
+              ./images/Portfolio/Online-Courses-desktop-1x.jpg 1x,
+              ./images/Portfolio/Online-Courses-desktop-2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/Portfolio/Online-Courses-tablet-1x.jpg 1x,
+              ./images/Portfolio/Online-Courses-tablet-2x.jpg 2x
+            "
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/Portfolio/Online-Courses-mobile-1x.jpg 1x,
+              ./images/Portfolio/Online-Courses-mobile-2x.jpg 2x
+            "
+          />
+          <img
+            class="portfolio-img"
+            src="./images/Portfolio/Online-Courses-mobile-1x.jpg"
+            alt="Online Courses"
+            width="360"
+            height="300"
+          />
+        </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -592,7 +666,7 @@
 
     <!-- #region Footer -->
 
-    <footer class="page-footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-style">
           <a class="logo footer-logo" href="./index.html"
@@ -674,7 +748,7 @@
 
     <!-- #region Leave your contacts and we will call you back -->
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal hiden">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -727,7 +801,7 @@
           <!-- #endregion -->
 
           <!-- #region Comment -->
-          <div class="form-field-label div-bottom">
+          <div class="form-field-label-comment">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
