--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <main>
       <!-- #region Hero section -->
       <section class="hero-section">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
-          <button class="order-service-button" type="button" data-modal-open>
+          <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
