--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     <main>
       <!-- #region Hero section -->
-      <section class="hero-section">
-        <div class="hero-container">
-          <h1 class="hero">Effective Solutions for Your Business</h1>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
@@ -90,9 +90,9 @@
 
       <!-- #region Our advantages -->
 
-      <section class="advantages-section">
+      <section class="section">
         <div class="container">
-          <h2 class="our-advantage-title visually-hidden">Our Advantages</h2>
+          <h2 class="visually-hidden">Our Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <div class="svg-adv-container">
@@ -100,7 +100,7 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title">Strategy</h3>
+              <h3 class="subtitle advantage-title">Strategy</h3>
               <p class="advantage-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -112,7 +112,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title">Punctuality</h3>
+              <h3 class="subtitle advantage-title">Punctuality</h3>
               <p class="advantage-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -124,7 +124,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title">Diligence</h3>
+              <h3 class="subtitle advantage-title">Diligence</h3>
               <p class="advantage-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -136,7 +136,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="advantage-title">Technologies</h3>
+              <h3 class="subtitle advantage-title">Technologies</h3>
               <p class="advantage-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -149,12 +149,10 @@
 
       <!-- #region Our Team -->
 
-      <section class="our-team-section">
-        <div class="container team-container">
+      <section class="section our-team-section">
+        <div class="container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="our-team-list">
-            <!-- #endregion -->
-
             <!-- #region Mark Guerrero -->
             <li class="our-team-item">
               <img
@@ -166,38 +164,62 @@
                 height="260"
               />
               <div class="our-team-container">
-                <h3 class="member-name">Mark Guerrero</h3>
+                <h3 class="subtitle member-name">Mark Guerrero</h3>
                 <p class="member-role">Product Designer</p>
-                <!-- #endregion -->
 
                 <!-- #region Mark Guerrero icon -->
-                <ul class="svg-list">
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Instagram"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Twitter"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Facebook"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Linkedin"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -206,7 +228,6 @@
                 </ul>
               </div>
             </li>
-            <!-- #endregion -->
 
             <!-- #region Tom Ford -->
 
@@ -220,39 +241,62 @@
                 height="260"
               />
               <div class="our-team-container">
-                <h3 class="member-name">Tom Ford</h3>
+                <h3 class="subtitle member-name">Tom Ford</h3>
                 <p class="member-role">Frontend Developer</p>
-                <!-- #endregion -->
 
                 <!-- #region Tom Ford icon -->
 
-                <ul class="svg-list">
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Instagram"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Twitter"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Facebook"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Linkedin"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -261,7 +305,6 @@
                 </ul>
               </div>
             </li>
-            <!-- #endregion -->
 
             <!-- #region Camila Garcia -->
 
@@ -275,38 +318,62 @@
                 height="260"
               />
               <div class="our-team-container">
-                <h3 class="member-name">Camila Garcia</h3>
+                <h3 class="subtitle member-name">Camila Garcia</h3>
                 <p class="member-role">Marketing</p>
-                <!-- #endregion -->
 
                 <!-- #region Camila Garcia icon -->
-                <ul class="svg-list">
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Instagram"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Twitter"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Facebook"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Linkedin"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -315,7 +382,6 @@
                 </ul>
               </div>
             </li>
-            <!-- #endregion -->
 
             <!-- #region Daniel Wilson -->
 
@@ -329,39 +395,62 @@
                 height="260"
               />
               <div class="our-team-container">
-                <h3 class="member-name">Daniel Wilson</h3>
+                <h3 class="subtitle member-name">Daniel Wilson</h3>
                 <p class="member-role">UI Designer</p>
-                <!-- #endregion -->
 
                 <!-- #region Daniel Wilson icon -->
 
-                <ul class="svg-list">
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Instagram"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Twitter"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Facebook"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="svg-item">
-                    <a href="" target="_blank" class="svg-link">
+                  <li class="social-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link to Linkedin"
+                    >
                       <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -377,8 +466,8 @@
 
       <!-- #region Our Portfolio -->
 
-      <section class="our-portfolio-section">
-        <div class="container portfolio-container">
+      <section class="section">
+        <div class="container">
           <h2 class="our-portfolio-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <!-- Banking App -->
