--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -192,7 +192,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -206,7 +206,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -220,7 +220,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Linkedin"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -255,7 +255,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -269,7 +269,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -283,7 +283,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -332,7 +332,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -346,7 +346,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -360,7 +360,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -374,7 +374,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Linkedin"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -409,7 +409,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -423,7 +423,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -437,7 +437,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -451,7 +451,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Linkedin"
                     >
-                      <svg class="svg-img" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -468,11 +468,11 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="our-portfolio-title">Our Portfolio</h2>
-          <ul class="our-portfolio-list">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
             <!-- Banking App -->
-            <li class="our-portfolio-item">
-              <div class="portfolio-item-wrapper">
+            <li class="portfolio-item">
+              <div class="portfolio-wrapper">
                 <picture>
                   <source
                     media="(min-width: 1158px)"
@@ -509,15 +509,15 @@
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Banking App</h3>
-                <p class="our-portfolio-description">App</p>
+              <div class="portfolio-container">
+                <h3 class="subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
               </div>
             </li>
 
             <!-- Cashless Payment -->
-            <li class="our-portfolio-item">
-              <div class="portfolio-item-wrapper">
+            <li class="portfolio-item">
+              <div class="portfolio-wrapper">
                 <picture>
                   <source
                     media="(min-width: 1158px)"
@@ -554,9 +554,9 @@
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Cashless Payment</h3>
-                <p class="our-portfolio-description">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="subtitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
 
@@ -599,9 +599,9 @@
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Meditation App</h3>
-                <p class="our-portfolio-description">App</p>
+              <div class="portfolio-container">
+                <h3 class="subtitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
               </div>
             </li>
 
@@ -644,9 +644,9 @@
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Taxi Service</h3>
-                <p class="our-portfolio-description">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="subtitle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
 
@@ -690,9 +690,9 @@
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Screen Illustrations</h3>
-                <p class="our-portfolio-description">Design</p>
+              <div class="portfolio-container">
+                <h3 class="subtitle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
               </div>
             </li>
 
@@ -736,9 +736,9 @@
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="our-portfolio-container">
-                <h3 class="section-title">Online Courses</h3>
-                <p class="our-portfolio-description">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="subtitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -767,41 +767,64 @@
         <div class="footer-links">
           <p class="footer-subtitle">Social media</p>
 
-          <ul class="svg-footer-list">
+          <ul class="footer-list">
             <li class="svg-footer-item">
-              <a href="" target="_blank" class="svg-footer-link">
-                <svg class="svg-footer-img" width="24" height="24">
+              <a
+                class="social-link footer-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link to Instagram"
+              >
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
 
             <li class="svg-footer-item">
-              <a href="" target="_blank" class="svg-footer-link">
-                <svg class="svg-footer-img" width="24" height="24">
+              <a
+                class="social-link footer-link"
+                href="https://www.twitter.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link to Twitter"
+              >
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
             <li class="svg-footer-item">
-              <a href="" target="_blank" class="svg-footer-link">
-                <svg class="svg-footer-img" width="24" height="24">
+              <a
+                class="social-link footer-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link to Facebook"
+              >
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
 
             <li class="svg-footer-item">
-              <a href="" target="_blank" class="svg-footer-link">
-                <svg class="svg-footer-img" width="24" height="24">
+              <a
+                class="social-link footer-link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link to Linkedin"
+              >
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <!-- #endregion -->
 
         <!-- #region Subscribe -->
 
@@ -829,19 +852,17 @@
     </footer>
     <!-- #endregion -->
 
-    <!-- #region Leave your contacts and we will call you back -->
+    <!-- #region Modal -->
 
     <div class="backdrop">
-      <div class="modal hiden">
+      <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
-        <form action="#" class="form" id="form1">
-          <!-- #endregion -->
-
+        <form class="form" name="form-feedback">
           <!-- #region Name -->
           <div class="form-field">
             <label class="form-label" for="user-name">Name</label>
@@ -857,7 +878,6 @@
               </svg>
             </div>
           </div>
-          <!-- #endregion -->
 
           <!-- #region Phone -->
           <div class="form-field">
@@ -869,7 +889,6 @@
               </svg>
             </div>
           </div>
-          <!-- #endregion -->
 
           <!-- #region Email -->
           <div class="form-field">
@@ -881,10 +900,9 @@
               </svg>
             </div>
           </div>
-          <!-- #endregion -->
 
           <!-- #region Comment -->
-          <div class="form-field-label-comment">
+          <div class="form-field label-comment">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
@@ -893,7 +911,6 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <!-- #endregion -->
 
           <!-- #region Privacy Policy -->
           <div class="form-checkbox">
@@ -906,7 +923,7 @@
             />
             <label class="form-label-text" for="user-privacy">
               <span class="span-form">
-                <svg class="modal-form-checkbox-icon" width="10" height="8">
+                <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
@@ -914,7 +931,6 @@
               <a href="" class="checkbox-link">Privacy Policy</a>
             </label>
           </div>
-          <!-- #endregion -->
 
           <!-- #region Submit Button -->
           <button class="form-submit" type="submit">Send</button>
