--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
       <section class="section our-team-section">
         <div class="container">
-          <h2 class="our-team-title">Our Team</h2>
+          <h2 class="our-team-title" id="studio">Our Team</h2>
           <ul class="our-team-list">
             <!-- #region Mark Guerrero -->
             <li class="our-team-item">
@@ -166,8 +166,6 @@
               <div class="our-team-container">
                 <h3 class="subtitle member-name">Mark Guerrero</h3>
                 <p class="member-role">Product Designer</p>
-
-                <!-- #region Mark Guerrero icon -->
 
                 <ul class="social-list">
                   <li class="social-item">
@@ -229,8 +227,6 @@
               </div>
             </li>
 
-            <!-- #region Tom Ford -->
-
             <li class="our-team-item">
               <img
                 class="our-team-image"
@@ -243,8 +239,6 @@
               <div class="our-team-container">
                 <h3 class="subtitle member-name">Tom Ford</h3>
                 <p class="member-role">Frontend Developer</p>
-
-                <!-- #region Tom Ford icon -->
 
                 <ul class="social-list">
                   <li class="social-item">
@@ -306,8 +300,6 @@
               </div>
             </li>
 
-            <!-- #region Camila Garcia -->
-
             <li class="our-team-item">
               <img
                 class="our-team-image"
@@ -320,8 +312,6 @@
               <div class="our-team-container">
                 <h3 class="subtitle member-name">Camila Garcia</h3>
                 <p class="member-role">Marketing</p>
-
-                <!-- #region Camila Garcia icon -->
 
                 <ul class="social-list">
                   <li class="social-item">
@@ -383,8 +373,6 @@
               </div>
             </li>
 
-            <!-- #region Daniel Wilson -->
-
             <li class="our-team-item">
               <img
                 class="our-team-image"
@@ -397,8 +385,6 @@
               <div class="our-team-container">
                 <h3 class="subtitle member-name">Daniel Wilson</h3>
                 <p class="member-role">UI Designer</p>
-
-                <!-- #region Daniel Wilson icon -->
 
                 <ul class="social-list">
                   <li class="social-item">
@@ -503,7 +489,7 @@
                     height="300"
                   />
                 </picture>
-                <p class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -548,7 +534,7 @@
                     height="300"
                   />
                 </picture>
-                <p class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -593,7 +579,7 @@
                     height="300"
                   />
                 </picture>
-                <p class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -638,7 +624,7 @@
                     height="300"
                   />
                 </picture>
-                <p class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -684,7 +670,7 @@
                     height="300"
                   />
                 </picture>
-                <p class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -730,7 +716,7 @@
                     height="300"
                   />
                 </picture>
-                <p class="overlay">
+                <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
