--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="visually-hidden our-advantage-title">Our Advantages</h2>
+          <h2 class="visually-hidden">Our Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <div class="svg-adv-container">
@@ -452,7 +452,7 @@
 
       <!-- #region Our Portfolio -->
 
-      <section class="section portfolio">
+      <section class="section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -496,7 +496,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="section-title">Banking App</h3>
+                <h3 class="section-title-text">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
@@ -541,14 +541,14 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="section-title">Cashless Payment</h3>
+                <h3 class="section-title-text">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
 
             <!-- Meditation App -->
-            <li class="our-portfolio-item">
-              <div class="portfolio-item-wrapper">
+            <li class="portfolio-item">
+              <div class="portfolio-wrapper">
                 <picture>
                   <source
                     media="(min-width: 1158px)"
@@ -586,14 +586,14 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="section-title">Meditation App</h3>
+                <h3 class="section-title-text">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
 
             <!-- Taxi Service -->
-            <li class="our-portfolio-item">
-              <div class="portfolio-item-wrapper">
+            <li class="portfolio-item">
+              <div class="portfolio-wrapper">
                 <picture>
                   <source
                     media="(min-width: 1158px)"
@@ -631,15 +631,15 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="section-title">Taxi Service</h3>
+                <h3 class="section-title-text">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
 
             <!-- #region Screen Illustrations Design -->
 
-            <li class="our-portfolio-item">
-              <div class="portfolio-item-wrapper">
+            <li class="portfolio-item">
+              <div class="portfolio-wrapper">
                 <picture>
                   <source
                     media="(min-width: 1158px)"
@@ -677,15 +677,15 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="section-title">Screen Illustrations</h3>
+                <h3 class="section-title-text">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
 
             <!-- #region Online Courses Marketing -->
 
-            <li class="our-portfolio-item">
-              <div class="portfolio-item-wrapper">
+            <li class="portfolio-item">
+              <div class="portfolio-wrapper">
                 <picture>
                   <source
                     media="(min-width: 1158px)"
@@ -723,7 +723,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="section-title">Online Courses</h3>
+                <h3 class="section-title-text">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
