--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     />
     <!--Styles css-->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="icon"
+      href="./images/favicon-32x32.png"
+      sizes="32x32"
+      type="image/png"
+    />
   </head>
 
   <!-- #endregion -->
